package view.ComponentViews;

public class CleanerView {

    public static void main(String[] args) {

    }

}
