package view.ComponentViews;

import view.View;
import java.awt.Graphics;

public class JunctionView extends View {
    @Override
    public void update() {
        // TODO: Frissítés a Junction modell állapota alapján
    }

    @Override
    public void draw(Graphics g) {
        // TODO: Kereszteződés kirajzolása
    }
}