package view.ComponentViews;

import view.View;

import java.awt.Graphics;

public class VehicleView extends View {
    @Override
    public void update() {
        // TODO: Frissítés a Vehicle modell állapota alapján
    }

    @Override
    public void draw(Graphics g) {
        // TODO: Jármű kirajzolása
    }
}