package view.ObserverLogic;

public interface Observer {
    public void update();
}
